# pasdevelib-bot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gbfs_results.json  pyproject.toml  requirements.txt  station_names_sample.json
.github/: keepalive.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aggregate.yml  backup.yml  bootstrap.yml  consolidate-bordeaux.yml  consolidate-cities.yml  consolidate-lille.yml  consolidate-lyon.yml  consolidate-montpellier.yml  consolidate-nantes.yml  consolidate-rennes.yml  consolidate-strasbourg.yml  consolidate-toulouse.yml  consolidate.yml  eval-daily.yml  eval-full.yml  eval-rolling.yml  explore-lyon-history.yml  flux.yml  forecast-cities.yml  forecast.yml  geocode-cities.yml  geocode-stations.yml  init-cities-release.yml  keepalive.yml  notify.yml  scores.yml  scrape-bordeaux.yml  scrape-cities.yml  scrape-lille.yml  scrape-lyon.yml  scrape-montpellier.yml  scrape-nantes.yml  scrape-rennes.yml  scrape-strasbourg.yml  scrape-toulouse.yml  scrape.yml  stats-cities.yml  test-gbfs-urls.yml  watchdog.yml
docs/: eval.md
pasdevelib/: __init__.py  aggregate.py  backup.py  bootstrap.py  calendar_feats.py  cities.py  consolidate.py  consolidate_cities.py  explore_lyon_history.py  export.py  fetch.py  fetch_city.py  flux.py  forecast.py  forecast_cities.py  geocode_cities.py  geocode_stations.py  notify.py  platt_calibrate.py  predict.py  routing.py  score.py  scrape.py  scrape_cities.py  scrape_loop.py  stats_cities.py  storage.py  watchdog.py  weather.py
pasdevelib/eval/: metrics.py  (+3 more)
(+9 files in other folders)
