[project]
name = "pasdevelib"
version = "0.1.0"
description = "Bot de collecte et de prédiction Vélib' pour PasDeVélib.fr"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pasdevelib*"]
